--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <div class="logo">
+            <div class="logo" data-aos="zoom-in">
                 <h1>Ifes Fly Summer</h1>
             </div>
             <nav class="menu">
