--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <header class="header">
             <div class="logo" data-aos="zoom-in">
-                <h1>Ifes aFly Summer</h1>
+                <h1>Ifes Fly Summer</h1>
             </div>
             <nav class="menu">
                 <a href="index.html">Inicio</a>
