--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Fly Summer</title>
+    <link rel="icon"  type="image/jpg" href="../Imagenes/logo.jpg">
     <link rel="stylesheet" href="../css/style.css">
 
 </head>
@@ -45,9 +47,16 @@
 
         <main class="contenido">
             <article class="articulo">
-                <div class="contenedor-pequeño">
-                    <a href="#"><img src="../Imagenes/imagen 5.jpg" alt="" /></a>
-                </div>
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="../Imagenes/imagen 5.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="../Imagenes/premiom.jpeg" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                  </div>
                 <div class="contenedor-texto">
                     <div>
                         <h2 class="titulo">
@@ -121,10 +130,12 @@ Invitacion de lujo al circuito de beach handball uruguayo, donde las chicas cons
             <p class="seguinos">Seguinos en: <a href="http://www.instagram.com/ifesflysummer/"
                     target="_blank">Instagram</a></p>
 
-            <a class="volver-a-inicio" href="index.html">Web creada por Lautaro Duran</a>
+                    <a href="index.html" class="link-warning">Web creada por Duran Lautaro</a>
 
         </footer>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
