--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,18 +41,24 @@ Para este 2022 incorporaremos nuevos modelos a nuestra indumentaria.
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                  <div class="carousel-item">
-                    <img src="../Imagenes/remeranegra.jpeg" class="d-block w-100">
+                  <div class="carousel-item active">
+                    <img src="../Imagenes/remeranegra.jpeg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Nuevo ingreso</h5>
-                      <p>Camiseta oficial de entrenamiento.</p>
+                      <p>Remera oficial de entrenamiento</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="../Imagenes/remeraroja.jpeg" class="d-block w-100">
+                    <img src="../Imagenes/remeraroja.jpeg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Nuevo ingreso</h5>
-                      <p>Camiseta secundaria de entrenamiento</p>
+                      <p>Remera alternativa de entrenamiento.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../Imagenes/camisetaa.jpeg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <p>Camiseta de uso diario.</p>
                     </div>
                   </div>
                 </div>
