--- a/pages/Jugadas.html
+++ b/pages/Jugadas.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Jugadas</title>
-    <link rel="icon"  type="image/jpg" href="../Imagenes/logo.jpg">
+    <link rel="icon" type="image/jpg" href="../Imagenes/logo.jpg">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -28,7 +29,7 @@
         <main class="contenido">
             <article class="articulo">
                 <div class="contenedor-pequeño">
-                    <a href="#"><video src="../videos/video 1.mp4" controls ></video> </a>
+                    <a href="#"><video src="../videos/video 1.mp4" controls></video> </a>
                 </div>
                 <div class="contenedor-texto">
                     <div>
@@ -47,7 +48,7 @@
 
             <article class="articulo">
                 <div class="contenedor-pequeño">
-                    <a> <video src="../videos/video 2.mp4" controls ></video></a>
+                    <a> <video src="../videos/video 2.mp4" controls></video></a>
                 </div>
                 <div class="contenedor-texto">
                     <div>
@@ -65,7 +66,7 @@
 
             <article class="articulo">
                 <div class="contenedor-pequeño">
-                    <a><video src="../videos/videodoble.mp4" controls ></video></a>
+                    <a><video src="../videos/videodoble.mp4" controls></video></a>
                 </div>
                 <div class="contenedor-texto">
                     <div>
@@ -97,15 +98,15 @@
                     <span class="input-group-text">Nombre y email</span>
                     <input type="text" aria-label="First name" class="form-control">
                     <input type="text" aria-label="Last name" class="form-control">
-                  </div>
-                  
-                  <div class="form-floating">
+                </div>
+
+                <div class="form-floating">
                     <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
                     <label for="floatingTextarea">Comments</label>
-                  </div>
-                  <div class="col-12">
+                </div>
+                <div class="col-12">
                     <button class="btn btn-primary" type="submit">Enviar Comentario</button>
-                  </div>
+                </div>
             </form>
 
         </aside>
@@ -116,13 +117,14 @@
             <p class="seguinos">Seguinos en: <a href="http://www.instagram.com/ifesflysummer/"
                     target="_blank">Instagram</a></p>
 
-                    <a href="index.html" class="link-warning">Web creada por Duran Lautaro</a>
-
+            <a href="index.html" class="link-warning">Web creada por Duran Lautaro</a>
         </footer>
 
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
