--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Fly Summer</title>
-    <link rel="icon"  type="image/jpg" href="../Imagenes/logo.jpg">
+    <link rel="icon" type="image/jpg" href="../Imagenes/logo.jpg">
     <link rel="stylesheet" href="../css/style.css">
 
 </head>
@@ -49,14 +50,14 @@
             <article class="articulo">
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="../Imagenes/imagen 5.jpg" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="../Imagenes/premiom.jpeg" class="d-block w-100" alt="...">
-                      </div>
+                        <div class="carousel-item active">
+                            <img src="../Imagenes/imagen 5.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../Imagenes/premiom.jpeg" class="d-block w-100" alt="...">
+                        </div>
                     </div>
-                  </div>
+                </div>
                 <div class="contenedor-texto">
                     <div>
                         <h2 class="titulo">
@@ -84,10 +85,11 @@
                         </h2>
                     </div>
                     <p class="oracion">
-Invitacion de lujo al circuito de beach handball uruguayo, donde las chicas consiguieron el 1er puesto y los chicos el 3ro.
+                        Invitacion de lujo al circuito de beach handball uruguayo, donde las chicas consiguieron el 1er
+                        puesto y los chicos el 3ro.
                     </p>
-                    <a href="https://www.instagram.com/p/B7hgSFRl84G/?utm_source=ig_web_copy_link"
-                        target="blank" class="link">Mas Info</a>
+                    <a href="https://www.instagram.com/p/B7hgSFRl84G/?utm_source=ig_web_copy_link" target="blank"
+                        class="link">Mas Info</a>
                 </div>
             </article>
 
@@ -102,7 +104,8 @@ Invitacion de lujo al circuito de beach handball uruguayo, donde las chicas cons
                         </h2>
                     </div>
                     <p class="oracion">
-                        Nuestro entrenador y 2 jugadores viajaron para ser participes del torneo de beach handball español
+                        Nuestro entrenador y 2 jugadores viajaron para ser participes del torneo de beach handball
+                        español
                     </p>
                     <a href="https://www.instagram.com/p/CSU8J1DNabx/?utm_source=ig_web_copy_link" target="blank"
                         class="link">Mas Info</a>
@@ -130,12 +133,13 @@ Invitacion de lujo al circuito de beach handball uruguayo, donde las chicas cons
             <p class="seguinos">Seguinos en: <a href="http://www.instagram.com/ifesflysummer/"
                     target="_blank">Instagram</a></p>
 
-                    <a href="index.html" class="link-warning">Web creada por Duran Lautaro</a>
-
+            <a href="index.html" class="link-warning">Web creada por Duran Lautaro</a>
         </footer>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
