iniciando con sass

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </div>
             </div>
             <nav class="menu">
-                <a href="https://cafecito.app/Ifesflysummer" target="_blank">Colaborar</a>
+                <a href="https://cafecito.app/Ifesflysummer" class="menu--a" target="_blank">Colaborar</a>
             </nav>
         </aside>
 
