--- a/pages/Jugadas.html
+++ b/pages/Jugadas.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Jugadas</title>
+    <title>Jugadas - Fly Summer</title>
+    <meta name="description" content="Videos de jugadas">
+    <meta name="keywords" content="Fly, 360, goles del doble">
     <link rel="icon" type="image/jpg" href="../Imagenes/logo.jpg">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -52,9 +54,9 @@
                 </div>
                 <div class="contenedor-texto">
                     <div>
-                        <h2 class="titulo">
+                        <h1 class="titulo">
                             <a>Beach handball</a>
-                        </h2>
+                        </h1>
 
                     </div>
                     <p class="oracion">
