--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <title>Fly Summer</title>
+        <title>Contacto - Fly Summer</title>
+        <meta name="description" content="Datos de contacto">
+        <meta name="keywords" content="Nueva indumentaria, ubicacion de entrenamiento">
         <link rel="icon"  type="image/jpg" href="../Imagenes/logo.jpg">
         <link rel="stylesheet" href="../css/style.css">
     
@@ -46,7 +48,7 @@
         <article class="articulo destacado">
             <div class="contenedor-texto">
                 <div>
-                    <h2 class="titulo"><a>Año nuevo, estilo nuevo</a></h2>
+                    <h1 class="titulo"><a>Año nuevo, estilo nuevo</a></h1>
 
                 </div>
                 <p class="oracion">
