--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Fly Summer</title>
+    <title>Noticias - Beach Handball</title>
+    <meta name="description" content="Bicampeones">
+    <meta name="keywords" content="Viajes de juego por uruguay, jugadores en la seleccion">
     <link rel="icon" type="image/jpg" href="../Imagenes/logo.jpg">
     <link rel="stylesheet" href="../css/style.css">
 
@@ -79,9 +81,9 @@
                 </div>
                 <div class="contenedor-texto">
                     <div>
-                        <h2 class="titulo">
+                        <h1 class="titulo">
                             <a>2da Copa Argentina</a>
-                        </h2>
+                        </h1>
                     </div>
                     <p class="oracion">
                         Esta vez la segunda edicion de la copa se realizo en la ciudad de Puerto Madryn donde tambien
