--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -107,7 +107,7 @@
                     </div>
                     <p class="oracion">
                         Invitacion de lujo al circuito de beach handball uruguayo, donde las chicas consiguieron el 1er
-                        puesto y los chicos el 3ro.
+                        puesto y los chicos el 3ro
                     </p>
                     <a href="https://www.instagram.com/p/B7hgSFRl84G/?utm_source=ig_web_copy_link" target="blank"
                         class="link">Mas Info</a>
