--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -5,18 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Campeones de la primera y segunda copa argentina, ambas ramas, Competencia y viaje a Uruguay y España">
+    <meta name="keywords" content="Bicampeones, Copa argentina, Noticias ambas ramas, Uruguay, España">
+    <title>Noticias - Beach Handball</title>
+     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Noticias - Beach Handball</title>
-    <meta name="description" content="Bicampeones">
-    <meta name="keywords" content="Viajes de juego por uruguay, jugadores en la seleccion">
+         <!--Logo-->
     <link rel="icon" type="image/jpg" href="../Imagenes/logo.jpg">
+     <!--Mi css-->
     <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
 <body>
     <div class="container">
+         <!--Header y barra de navegacion-->
         <header class="header">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
@@ -27,16 +31,19 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="../pages/Jugadas.html">Jugadas</a>
+                        <a class="nav-link" href="../pages/jugadas.html">Jugadas</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="../pages/noticias.html">Noticias</a>
+                        <a class="nav-link active" href="../pages/noticias.html">Noticias</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../pages/ubicacion.html">Ubicacion</a>
                       </li>
                     </ul>
                     <form class="d-flex">
@@ -47,8 +54,8 @@
                 </div>
               </nav>
         </header>
-
-        <article class="articulo destacado">
+ <!--Articulo destacado-->
+        <section class="articulo destacado">
             <div class="contenedor-texto">
                 <div>
                     <h2 class="titulo"><a>Fly Summer 1ra Copa Argentina</a></h2>
@@ -65,8 +72,8 @@
                     <img src="../Imagenes/campeones.jpg" alt="" />
                 </a>
             </div>
-        </article>
-
+        </section>
+ <!--Articulos y diferentes accesos-->
         <main class="contenido">
             <article class="articulo">
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
@@ -133,7 +140,7 @@
                 </div>
             </article>
         </main>
-
+<!--Aside-->
         <aside class="sidebar">
             <div class="acerca-de">
                 <img src="../Imagenes/logo.jpg" class="img-perfil" alt="" />
@@ -149,7 +156,7 @@
                 <a href="https://cafecito.app/Ifesflysummer" target="_blank">Colaborar</a>
             </nav>
         </aside>
-
+<!--Footer y redes-->
         <footer class="footer">
             <a href="http://www.instagram.com/ifesflysummer/"
                     target="_blank">Instagram</a>
@@ -160,7 +167,7 @@
             <a href="index.html" class="link-warning">Web creada por Duran Lautaro</a>
         </footer>
     </div>
-
+<!--bootstrap js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
