--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -7,17 +7,17 @@
         <meta name="description" content="Nueva indumentaria, Contactate con nuestro entrenador para comenzar los entrenamientos, todos tienen una posibilidad">
         <meta name="keywords" content="Nueva indumentaria,lugar de entrenamiento, Colabora con nosotros con un cafecito!, Numero de contacto">
         <title>Contacto - Fly Summer</title>
-         <!--Bootstrap-->
+        <!--Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!--Logo-->
+         <!--Logo-->
         <link rel="icon"  type="image/jpg" href="../Imagenes/logo.jpg">
-            <!--Mi css-->
+         <!--Mi css-->
         <link rel="stylesheet" href="../css/style.css">
     
     </head>
 <body>
     <div class="container">
-      <!--Header y barra de navegacion-->
+         <!--Header y barra de navegacion-->
         <header class="header">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
@@ -28,7 +28,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="../pages/jugadas.html">Jugadas</a>
@@ -37,10 +37,10 @@
                         <a class="nav-link" href="../pages/noticias.html">Noticias</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="../pages/contacto.html">Contacto</a>
+                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="./ubicacion.html">Ubicacion</a>
+                        <a class="nav-link active" href="./ubicacion.html">Ubicacion</a>
                       </li>
                     </ul>
                     <form class="d-flex">
@@ -51,15 +51,15 @@
                 </div>
               </nav>
         </header>
-       <!--Seccion con articulos destacados y carrousel-->
+ <!--Articulo destacado y carrousel-->
         <section class="articulo destacado">
             <div class="contenedor-texto">
                 <div>
-                    <h1 class="titulo"><a>Año nuevo, estilo nuevo</a></h1>
+                    <h1 class="titulo"><a>Grupo Educativo Ifes.</a></h1>
 
                 </div>
                 <p class="oracion">
-Para este 2022 incorporaremos nuevos modelos a nuestra indumentaria.
+En este complejo, se pueden realizar diferentes actividades fisicas. Contamos con gimnasio, canchas de fultbol y handball.
                 </p>
             </div>
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -70,23 +70,21 @@ Para este 2022 incorporaremos nuevos modelos a nuestra indumentaria.
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../Imagenes/remeranegra.jpeg" class="d-block w-100" alt="...">
+                    <img src="../Imagenes/grupo educativo.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Nuevo ingreso</h5>
-                      <p>Remera oficial de entrenamiento</p>
+                      <h5>Diversidad de actividades</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="../Imagenes/remeraroja.jpeg" class="d-block w-100" alt="...">
+                    <img src="../Imagenes/canchadefutbol.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>Nuevo ingreso</h5>
-                      <p>Remera alternativa de entrenamiento.</p>
+                      <h5>Nuestro campo de entrenamiento de futbol</h5>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="../Imagenes/camisetaa.jpeg" class="d-block w-100" alt="...">
+                    <img src="../Imagenes/canchabeach.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                      <p>Camiseta de uso diario.</p>
+                      <p>Nuestra cancha de beach handball.</p>
                     </div>
                   </div>
                 </div>
@@ -100,30 +98,26 @@ Para este 2022 incorporaremos nuevos modelos a nuestra indumentaria.
                 </button>
               </div>
         </section>
-       <!--SArticulos secundarios-->
         <main class="contenido">
             <article class="articulo">
                 <div class="contenedor-pequeño">
-                    <a href="#"><img src="../Imagenes/imagen profe.jpg" alt="" /></a>
-                </div>
+                    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 92.3 132.3"><path fill="#1a73e8" d="M60.2 2.2C55.8.8 51 0 46.1 0 32 0 19.3 6.4 10.8 16.5l21.8 18.3L60.2 2.2z"/><path fill="#ea4335" d="M10.8 16.5C4.1 24.5 0 34.9 0 46.1c0 8.7 1.7 15.7 4.6 22l28-33.3-21.8-18.3z"/><path fill="#4285f4" d="M46.2 28.5c9.8 0 17.7 7.9 17.7 17.7 0 4.3-1.6 8.3-4.2 11.4 0 0 13.9-16.6 27.5-32.7-5.6-10.8-15.3-19-27-22.7L32.6 34.8c3.3-3.8 8.1-6.3 13.6-6.3"/><path fill="#fbbc04" d="M46.2 63.8c-9.8 0-17.7-7.9-17.7-17.7 0-4.3 1.5-8.3 4.1-11.3l-28 33.3c4.8 10.6 12.8 19.2 21 29.9l34.1-40.5c-3.3 3.9-8.1 6.3-13.5 6.3"/><path fill="#34a853" d="M59.1 109.2c15.4-24.1 33.3-35 33.3-63 0-7.7-1.9-14.9-5.2-21.3L25.6 98c2.6 3.4 5.3 7.3 7.9 11.3 9.4 14.5 6.8 23.1 12.8 23.1s3.4-8.7 12.8-23.2"/></svg></a>
+                </div>                
                 <div class="contenedor-texto">
                     <div>
                         <h2 class="titulo">
-                            <a>Contacto</a>
+                            <a>Donde nos podes encontrar</a>
                         </h2>
                     </div>
                     <p class="oracion">
-                        <ul>
-                            <li>Nombre del DT: Julian Huaquilaf</li>
-                            <li>Telefono: +54 9 2995551577</li>
-                        </ul>
+                    Ubicacion al costado de la colectora, facil localizacion
                     </p>
-                    <a href="https://www.instagram.com/julianhuaiquilaf?utm_medium=copy_link" target="blank" class="link">Instagram</a>
+                    <a href="https://www.google.com.ar/maps/place/Colegio+IFES+Neuquen/@-38.9583998,-68.1399952,17z/data=!3m1!4b1!4m5!3m4!1s0x960a333cf1ff81d7:0xcd4af29338025599!8m2!3d-38.9584026!4d-68.1378065" target="blank" class="link">Como llegar</a>
                 </div>
             </article>
 
         </main>
-       <!--Aside-->
+ <!--Aside-->
         <aside class="sidebar">
             <div class="acerca-de">
                 <img src="../Imagenes/logo.jpg" class="img-perfil" alt="" />
@@ -139,7 +133,7 @@ Para este 2022 incorporaremos nuevos modelos a nuestra indumentaria.
                 <a href="https://cafecito.app/Ifesflysummer" target="_blank">Colaborar</a>
             </nav>
         </aside>
- <!--Footer y redes-->
+<!--Footer y redes-->
         <footer class="footer">
             <a href="http://www.instagram.com/ifesflysummer/"
                     target="_blank">Instagram</a>
