--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Nueva indumentaria, Contactate con nuestro entrenador para comenzar los entrenamientos, todos tienen una posibilidad">
         <meta name="keywords" content="Nueva indumentaria,lugar de entrenamiento, Colabora con nosotros con un cafecito!, Numero de contacto">
-        <title>Contacto - Fly Summer</title>
+        <title>Ubicacion - Fly Summer</title>
         <!--Bootstrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
          <!--Logo-->
